Fix z-index for nav

--- a/css/global.css
+++ b/css/global.css
@@ -2383,6 +2383,9 @@ h1.title {
   float: right;
   margin-right: 40px;
 }
+.navbar .navbar-nav {
+  z-index: 100;
+}
 .navbar .navbar-nav li > a {
   color: #ffffff;
   padding: 5px 15px;
@@ -2420,7 +2423,6 @@ h1.title {
   position: absolute;
   top: 0;
   padding-top: 25px;
-  z-index: 100;
 }
 .navbar.affix {
   background: #404040;
